# FacEx

./: LICENSE  README.md  pyproject.toml
efast_sale/: hooks.py  modules.txt  patches.txt
efast_sale/api/: analytics.py  customer.py  invoice.py  item.py  reports.py
efast_sale/efast_sale/doctype/efast_invoice_payment/: efast_invoice_payment.json  efast_invoice_payment.py
efast_sale/efast_sale/page/efast_sale/: efast_sale.js  efast_sale.json
efast_sale/efast_sale/page/facex/: facex.js  facex.json  facex.py
efast_sale/efast_sale/workspace/efast_sale/: efast_sale.json
efast_sale/fixtures/: print_format.json
efast_sale/patches/v1_0/: create_custom_fields.py
efast_sale/templates/print_formats/: cotizacion_facex.css  cotizacion_facex.html  fac_fel.css  fac_fel.html  recibo_pago_facex.css  recibo_pago_facex.html
