[project]
name = "efast_sale"
authors = [{ name = "CHAPPSA", email = "soporte@chappsa.com" }]
description = "eFast Sale — Interfaz rápida tipo POS para Sales Invoice con certificación FEL"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = ["frappe"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "efast_sale"
